--- a/SitioWebCarrera/src/assets/i18n/inicio.zapoteco.json
+++ b/SitioWebCarrera/src/assets/i18n/inicio.zapoteco.json
@@ -19,7 +19,7 @@
       }
     ],
     "CTA": {
-      "TITLE": "¿Zula'dxi para guzulu'?",
+      "TITLE": "¿Bizulu' ne laadu?",
       "TEXT": "Guyuu' lade guidxi ni napa guendariene stinu.",
       "BUTTON_MORE": "Gunna' jma",
       "BUTTON_CONTACT": "Guni' ne laadu"
