--- a/SitioWebCarrera/src/assets/i18n/navbar.zapoteco.json
+++ b/SitioWebCarrera/src/assets/i18n/navbar.zapoteco.json
@@ -1,12 +1,12 @@
 ﻿{
   "NAVBAR": {
-    "HOME": "Xquidxe",
-    "ABOUT": "Diidxazá",
-    "STUDY_PLAN": "Guendaróo",
-    "PROJECTS": "Xtiidxa",
-    "TEACHERS": "Binnigula'sa",
-    "APPLICANTS": "Binni guendaróo",
-    "GRADUATES": "Egresados",
+    "HOME": "Ruzulu'",
+    "ABOUT": "¿Tu laadu?",
+    "STUDY_PLAN": "Ni' rusiidi du'",
+    "PROJECTS": "Dxiiña' huayuniidu",
+    "TEACHERS": "Binni ni rusiidi",
+    "APPLICANTS": "Ni rului'la'dxi chu'",
+    "GRADUATES": "Binni binduxhe'",
     "LANGUAGE": "Diidxa",
     "LANG_ES": "Español",
     "LANG_EN": "English",
