--- a/SitioWebCarrera/src/assets/i18n/inicio.zapoteco.json
+++ b/SitioWebCarrera/src/assets/i18n/inicio.zapoteco.json
@@ -2,7 +2,7 @@
   "INICIO": {
     "NEWS_TICKER": "Diidxa cubi",
     "CALENDAR_BUTTON": "Ca' dxi guendaridagulisaa",
-    "HERO_TITLE": "Ingeniería de Software",
+    "HERO_TITLE": "Guendanacuubi sti' xquendabiaani'  binni laanu",
     "HERO_BUTTON": "Bizulu' ne laadu",
     "FEATURES": [
       {
